kubernetes-home-ops/kubernetes/apps/selfhosted/manyfold/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.smadja.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: manyfold
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: manyfold
      app.kubernetes.io/instance: manyfold
      app.kubernetes.io/controller: manyfold
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
            gateway.networking.k8s.io/gateway-name: envoy-internal
      toPorts:
        - ports:
            - port: "3214"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: manyfold
            app.kubernetes.io/instance: manyfold
            app.kubernetes.io/controller: redis
---
# yaml-language-server: $schema=https://k8s-schemas.smadja.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: manyfold-redis
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: manyfold
      app.kubernetes.io/instance: manyfold
      app.kubernetes.io/controller: redis
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: manyfold
            app.kubernetes.io/instance: manyfold
            app.kubernetes.io/controller: manyfold
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
